--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "first steps in organisation frontend aplication",
     "main": "index.js",
     "scripts": {
+        "build": "webpack",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
@@ -18,5 +19,20 @@
     "bugs": {
         "url": "https://github.com/grygoriy-pinkas/React-first-pitch/issues"
     },
-    "homepage": "https://github.com/grygoriy-pinkas/React-first-pitch#readme"
+    "homepage": "https://github.com/grygoriy-pinkas/React-first-pitch#readme",
+    "dependencies": {
+        "jquery": "^3.3.1",
+        "npm": "^6.0.0"
+    },
+    "devDependencies": {
+        "css-loader": "^0.28.11",
+        "eslint": "^4.19.1",
+        "eslint-plugin-react": "^7.7.0",
+        "less": "^3.0.2",
+        "less-loader": "^4.1.0",
+        "style-loader": "^0.21.0",
+        "webpack": "^4.6.0",
+        "webpack-cli": "^2.0.15",
+        "webpack-dev-server": "^3.1.3"
+    }
 }
