--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     },
     "homepage": "https://github.com/grygoriy-pinkas/React-first-pitch#readme",
     "dependencies": {
+        "body-parser": "^1.18.2",
+        "express": "^4.16.3",
         "jquery": "^3.3.1",
+        "morgan": "^1.9.0",
         "npm": "^6.0.0"
     },
     "devDependencies": {
